# qutim

core/src/corelayers/chatng/: CMakeLists.txt
core/src/corelayers/chatng/lib/: CMakeLists.txt  chat.cpp  chat.h  chatchannel.cpp  chatchannel.h  chatchannelmodel.cpp  chatchannelmodel.h  chatchannelusersmodel.cpp  chatchannelusersmodel.h  chatcontroller.cpp  chatcontroller.h  chatmessagemodel.cpp  chatmessagemodel.h  chatpreview.cpp  chatpreview.h  chatviewstyle.cpp  chatviewstyle.h  quickchat.h
core/src/corelayers/chatng/qml/quickChatForm/default/: ChatView.qml  main.qml
core/src/corelayers/chatng/src/: chatform.cpp  chatform.h  chatplugin.cpp  chatplugin.h
plugins/core/: core.pro
